# stat-test

./: CMakeLists.txt  ED.cpp  ED.hpp  ED.txt  README.md  TS_models.hpp  TS_models.ipp  a.out  basic_funcs.hpp  basic_funcs.ipp  critical_value_comparison.cpp  critical_vector_comparison.cpp  data_gen.hpp  distr_func.txt  distribution.cpp  distribution.hpp  draft.cpp  empirical_distr.hpp  empirical_distr.ipp  empirical_dsitr.cpp  empirical_dsitr.hpp  equal_distr_statistics.hpp  equal_distr_statistics.ipp  equal_distr_test.cpp  equal_distr_test.hpp  equal_distr_test.ipp  equal_test_statistics.hpp  estimator_comparison.cpp  local_estimator.hpp  local_estimator.ipp  lpefunc.hpp  lpefunc.ipp  main.cpp  resampling.cpp  resampling.hpp  resampling.ipp  tested_student_t_1.txt  tested_student_t_10.txt  tested_student_t_15.txt  tested_student_t_20.txt  (+7 more)
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  critical_vector_comparison  equal_test
equal_distr/: a.out  equal_distr_test.hpp  equal_test_statistics.hpp
equal_test/: CMakeLists.txt  main.cpp
